@@ -113,6 +113,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 6903) Added Cantonese localisation (zh-yue)
 * Fix regression in Korean and Japanese date formatting (day of week)
 * (bug 6919) Add English alias magic words for Tatar (tt) language file.
+* (bug 6753) Fixed broken Kazakh linktrail (kk)
 
 == Languages updated ==
 
